<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CharacterDetails">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CharacterDetails">

        <TextView
            android:id="@+id/characterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:text="TextView"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/characterImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="275dp"
            android:layout_height="275dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toTopOf="@+id/characterStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterName"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/characterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/characterStatus"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/characterSpecy"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterImage" />

        <TextView
            android:id="@+id/characterSpecy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/characterSpecy"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/characterGender"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterSpecy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterStatus" />

        <TextView
            android:id="@+id/characterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/characterGender"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/characterOrigin"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterSpecy" />

        <TextView
            android:id="@+id/characterOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/characterOrigin"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/characterLocation"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterOrigin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterGender" />

        <TextView
            android:id="@+id/characterLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/characterLocation"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/characterEpisodes"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterOrigin" />

        <TextView
            android:id="@+id/characterEpisodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/characterEpisodes"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/characterCreated"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterEpisodes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterLocation" />

        <TextView
            android:id="@+id/characterCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/characterCreated"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/getcharacterCreated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterEpisodes" />

        <TextView
            android:id="@+id/getcharacterStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textSize="22sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterStatus"
            app:layout_constraintTop_toTopOf="@+id/characterStatus" />

        <TextView
            android:id="@+id/getcharacterSpecy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterSpecy"
            app:layout_constraintTop_toTopOf="@+id/characterSpecy" />

        <TextView
            android:id="@+id/getcharacterGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterGender"
            app:layout_constraintTop_toTopOf="@+id/characterGender" />

        <TextView
            android:id="@+id/getcharacterOrigin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterOrigin"
            app:layout_constraintTop_toTopOf="@+id/characterOrigin" />

        <TextView
            android:id="@+id/getcharacterLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterLocation"
            app:layout_constraintTop_toTopOf="@+id/characterLocation" />

        <TextView
            android:id="@+id/getcharacterEpisodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterEpisodes"
            app:layout_constraintTop_toTopOf="@+id/characterEpisodes" />

        <TextView
            android:id="@+id/getcharacterCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/characterCreated"
            app:layout_constraintTop_toTopOf="@+id/characterCreated" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>